# kalshi-orchestrator

./: .env.example  .gitignore  README.md  STATUS.md  pyproject.toml
docs/research/: README.md  kalshi-api-capability-map.md  kalshi-api-domain-findings.json  kalshi-api-open-questions.json  kalshi-orchestrator-architecture.md
docs/superpowers/plans/: 2026-06-14-kalshi-console-m0-onboarding-auth.md
docs/superpowers/specs/: 2026-06-13-kalshi-console-design.md
scripts/: install-hooks.sh  onboard.py
scripts/git-hooks/: pre-commit
src/kalshi_console/app/: config.py  timeutil.py
src/kalshi_console/kalshi/: endpoints.py  rest_client.py  signing.py
src/kalshi_console/onboarding/: cli.py  keygen.py
tests/: conftest.py  test_endpoints_config.py  test_keygen.py  test_onboard_cli.py  test_rest_client.py  test_signing.py  test_timeutil.py
