[project]
name = "kalshi-console"
version = "0.1.0"
description = "Assisted-execution console for Kalshi (read-only v1)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "cryptography>=42",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
kalshi-onboard = "kalshi_console.onboarding.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_console"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
